err/geobricksspatialquery.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Cors-3.0.3.dist-info'...
Listing './lib/python3.5/site-packages/GeobricksCommon-0.0.9.egg-info'...
Listing './lib/python3.5/site-packages/GeobricksDBMS-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/GeobricksSpatialQuery-0.0.8.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_cors'...
Listing './lib/python3.5/site-packages/geobricks_common'...
Listing './lib/python3.5/site-packages/geobricks_common/config'...
Listing './lib/python3.5/site-packages/geobricks_common/core'...
Compiling './lib/python3.5/site-packages/geobricks_common/core/date.py'...
***   File "./lib/python3.5/site-packages/geobricks_common/core/date.py", line 51
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/geobricks_common/core/filesystem.py'...
***   File "./lib/python3.5/site-packages/geobricks_common/core/filesystem.py", line 17
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/geobricks_common/rest'...
Listing './lib/python3.5/site-packages/geobricks_dbms'...
Listing './lib/python3.5/site-packages/geobricks_dbms/config'...
Listing './lib/python3.5/site-packages/geobricks_dbms/core'...
Compiling './lib/python3.5/site-packages/geobricks_dbms/core/dbms_postgresql.py'...
***   File "./lib/python3.5/site-packages/geobricks_dbms/core/dbms_postgresql.py", line 55
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/geobricks_dbms/rest'...
Listing './lib/python3.5/site-packages/geobricks_spatial_query'...
Listing './lib/python3.5/site-packages/geobricks_spatial_query/config'...
Listing './lib/python3.5/site-packages/geobricks_spatial_query/core'...
Listing './lib/python3.5/site-packages/geobricks_spatial_query/rest'...
Compiling './lib/python3.5/site-packages/geobricks_spatial_query/rest/spatial_query_rest.py'...
***   File "./lib/python3.5/site-packages/geobricks_spatial_query/rest/spatial_query_rest.py", line 60
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/geobricks_spatial_query/utils'...
Compiling './lib/python3.5/site-packages/geobricks_spatial_query/utils/encode_postgis.py'...
***   File "./lib/python3.5/site-packages/geobricks_spatial_query/utils/encode_postgis.py", line 97
    print "Not able to determine spatial reference assuming WGS84."
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/geobricks_spatial_query/utils/geojson_encoder.py'...
***   File "./lib/python3.5/site-packages/geobricks_spatial_query/utils/geojson_encoder.py", line 53
    print output
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pathtools'...
Listing './lib/python3.5/site-packages/pathtools-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psycopg2'...
Listing './lib/python3.5/site-packages/psycopg2/.libs'...
Listing './lib/python3.5/site-packages/psycopg2/tests'...
Listing './lib/python3.5/site-packages/psycopg2-2.7.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pyproj'...
Listing './lib/python3.5/site-packages/pyproj/data'...
Listing './lib/python3.5/site-packages/pyproj-1.9.5.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/watchdog'...
Listing './lib/python3.5/site-packages/watchdog/observers'...
Listing './lib/python3.5/site-packages/watchdog/tricks'...
Listing './lib/python3.5/site-packages/watchdog/utils'...
Listing './lib/python3.5/site-packages/watchdog-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
